# rsvpp

./: .gitignore  Cargo.toml
examples/: Cargo.toml  acl.rs  build.rs  stats.rs  version.rs
examples/vpp_api/: mod.rs
pack/: Cargo.toml
pack/pack-macro/: Cargo.toml
pack/pack-macro/src/: default_parser.rs  lib.rs  union_parser.rs  util.rs
pack/pack-macro/src/parser/: enum_parser.rs  mod.rs  struct_parser.rs
pack/pack-trait/: Cargo.toml
pack/pack-trait/src/: lib.rs  pack.rs  pack_default.rs
pack/src/: lib.rs
pack/tests/: autogen.rs  default_autogen.rs  default_handwrite.rs  handwrite.rs
rsvpp/: Cargo.toml
rsvpp-apigen/: Cargo.toml
rsvpp-apigen/src/: generator.rs  lib.rs  main.rs  parser.rs  utils.rs
rsvpp/examples/version/: main.rs
rsvpp/src/: client.rs  error.rs  hard_coded_message.rs  lib.rs  message.rs  session.rs
rsvpp/src/stats/: mod.rs  socket.rs  util.rs  vpp_types.rs
rsvpp/src/transport/: mod.rs  unix.rs
