[package]
name = "examples"
version = "0.1.0"
authors = ["wangqj <qpalzmqaz123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", default-features = false, features = ["macros"] }
rsvpp = { path = "../rsvpp" }

[build-dependencies]
rsvpp-apigen = { path = "../rsvpp-apigen" }

[[example]]
name = "version"
path = "version.rs"

[[example]]
name = "acl"
path = "acl.rs"

[[example]]
name = "stats"
path = "stats.rs"
