[package]
name = "rsvpp-apigen"
version = "0.1.0"
authors = ["wangqj <qpalzmqaz123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"
lazy_static = "1"
regex = "1"
