[package]
name = "rsvpp"
version = "0.1.0"
authors = ["wangqj <qpalzmqaz123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pack = { path = "../pack" }

tokio = { version = "0.2", default-features = false, features = ["uds", "io-util", "sync", "rt-core", "time"] }
async-trait = { version = "0.1.51", default-features = false }
log = { version = "0.4.14", default-features = false }

[dev-dependencies]
tokio = { version = "0.2", default-features = false, features = ["macros"] }
env_logger = "0.9.0"
